# seekrs

./: Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: release.yml
src/: cli.rs  display.rs  duplicate.rs  filters.rs  main.rs  opener.rs  preview.rs  search.rs  tree.rs  upgrader.rs
