[package]
name = "seekrs"
version = "0.1.0"
edition = "2024"
description = "🔍 A blazing-fast, colorful file search tool"
license = "MIT"
repository = "https://github.com/DTS-11/seekrs"
homepage = "https://github.com/DTS-11/seekrs"
readme = "README.md"
keywords = ["search", "files", "fuzzy", "cli", "finder"]
categories = ["command-line-utilities"]

[dependencies]
chrono = { version="0.4.44", features=["serde"] }
clap = { version="4.6.1", features=["derive"] }
colored = "3.1.1"
fuzzy-matcher = "0.3.7"
md5 = "0.8.0"
open = "5.3.3"
regex = "1.12.3"
walkdir = "2.5.0"
